force-app/main/default/objects/breadwinner_qbo__Invoice__c/breadwinner_qbo__Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices from your QuickBooks synced into Salesforce through Breadwinner</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>