force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>breadwinner_qbo__Account__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency</label>
    <type>Text</type>
</CustomField>