force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Account__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QuickBooks Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>