force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount_Credited__c</fullName>
    <description>Amount Credited will be calculated only if any Credit Memo applied to Invoice</description>
    <label>Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>