force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount_Overdue__c</fullName>
    <formula>IF( breadwinner_qbo__Due_Date__c  &lt;  TODAY(),  breadwinner_qbo__Amount_Due__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>