force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_City__c</fullName>
    <description>City of the Billing Address</description>
    <label>Billing City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>