force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_Country__c</fullName>
    <description>Country of Billing Address</description>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>