force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_Location__c</fullName>
    <label>Billing Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>