force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_Postal_Code__c</fullName>
    <label>Billing Postal / Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>