force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_State__c</fullName>
    <description>State of the Billing Address</description>
    <label>Billing State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>