force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Billing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billing_Street_Address__c</fullName>
    <label>Billing Street Address</label>
    <type>TextArea</type>
</CustomField>