force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Created_via__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Created_via__c</fullName>
    <label>Created via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>