force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Credit_Memo_Allocated_Credit__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Credit_Memo_Allocated_Credit__c</fullName>
    <label>Credit Memo - Allocated Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>