force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Credit_Memo_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Credit_Memo_Total_Amount__c</fullName>
    <label>Total Credit / Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>