force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Custom_Field_3_Value__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Custom_Field_3_Value__c</fullName>
    <label>Custom Field 3 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>