force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>