force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Customer_Reference__c</fullName>
    <label>Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>