force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Days_Overdue__c</fullName>
    <formula>IF(OR(breadwinner_qbo__Amount_Overdue__c == 0.00,ISBLANK(breadwinner_qbo__Amount_Overdue__c))  , null, TODAY() - breadwinner_qbo__Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>