force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Days_Paid_Late__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Days_Paid_Late__c</fullName>
    <description>The number of days late an invoice has been paid. If a negative number, this is the number of days early. If 0, the Invoice was paid on time. If blank, the Invoice has not been paid yet or has no due date</description>
    <inlineHelpText>The number of days late an invoice has been paid. If a negative number, this is the number of days early. If 0, the Invoice was paid on time. If blank, the Invoice has not been paid yet or has no due date</inlineHelpText>
    <label>Days Paid Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>