force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Discount_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>