force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Email__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Email__c</fullName>
    <description>The e-mail address where the invoice is sent</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>