force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Email_Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Email_Status__c</fullName>
    <description>Email status of the invoice. 
Values: NotSet, NeedToSend, EmailSent</description>
    <label>Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>