force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Fully_Paid_On_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Fully_Paid_On_Date__c</fullName>
    <description>It is the latest date of Payment Dates, when the invoice is Paid.</description>
    <label>Fully Paid On Date</label>
    <type>Date</type>
</CustomField>