force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>