force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>