force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice_URL__c</fullName>
    <formula>HYPERLINK( 
  &quot;https://&quot;&amp;IF( CONTAINS(breadwinner_qbo__QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp;
    CASE(
       breadwinner_qbo__Type__c,

       &apos;Credit Memo&apos;, &quot;creditmemo?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&apos;-CM-&apos;, breadwinner_qbo__Invoice_Id__c) - 3 )),

       &apos;Sales Receipt&apos;, &quot;salesreceipt?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&apos;-SR-&apos;, breadwinner_qbo__Invoice_Id__c)- 3)),

       &apos;Refund Receipt&apos;, &quot;refundreceipt?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&apos;-RR-&apos;, breadwinner_qbo__Invoice_Id__c)- 3)),      
 
       &quot;invoice?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&apos;-INV-&apos;, breadwinner_qbo__Invoice_Id__c) - 4 ))

       
    ),
  &quot;Click Here&quot;
)</formula>
    <label>See this Invoice in QuickBooks</label>
    <type>Text</type>
</CustomField>