force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Message_Displayed__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Message_Displayed__c</fullName>
    <label>Message Displayed on Invoice</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>