force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>