force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Public_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Public_Invoice_Link__c</fullName>
    <label>Public Invoice Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>