force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>breadwinner_qbo__Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>