force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>