force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Shipping_Date__c</fullName>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>