force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Shipping_Method__c</fullName>
    <label>Ship via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>