force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Statement_Memo__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Statement_Memo__c</fullName>
    <label>Statement Memo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>