force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Status__c</fullName>
    <formula>IF( 
  ISBLANK( breadwinner_qbo__Internal_Status__c ),
  CASE( 
    breadwinner_qbo__Type__c,
    
    &apos;Sales Receipt&apos;, &apos;Paid&apos;,
    &apos;Refund Receipt&apos;, &apos;Paid&apos;,

    &apos;Invoice&apos;, IF( breadwinner_qbo__Amount_Overdue__c &gt; 0,
                  &apos;Overdue&apos;,
                  IF( breadwinner_qbo__Amount_Due__c &gt; 0,
                    IF( breadwinner_qbo__Amount_Received__c &gt; 0,
                      &apos;Partial&apos;,
                      &apos;Open&apos;
                    ),
                    &apos;Paid&apos;
                  )
                ),

    IF( breadwinner_qbo__Credit_Memo_Unallocated_Credit__c &gt; 0,
      &apos;Unapplied&apos;,
      &apos;Closed&apos;
    )
  ),
  breadwinner_qbo__Internal_Status__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>