force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Total__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>