force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>