force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Type__c</fullName>
    <description>Describes the record: Invoice or Credit Note</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>