force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <formula>DATEVALUE(breadwinner_qbo__Custom_Field_3_Value__c)</formula>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>