force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/Loss_to_LR_43_44__c.field-meta.xml
<CustomField>
    <fullName>Loss_to_LR_43_44__c</fullName>
    <formula>breadwinner_qbo__Amount_Received__c *(10/9)*(0.4333)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Pmt to LR (43.44%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>