force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/to_CUG__c.field-meta.xml
<CustomField>
    <fullName>to_CUG__c</fullName>
    <formula>breadwinner_qbo__Amount_Received__c *(12/100)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to CUG (12%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>