force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/to_Operating__c.field-meta.xml
<CustomField>
    <fullName>to_Operating__c</fullName>
    <formula>breadwinner_qbo__Amount_Received__c *(10/9)*(28/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to Operating (28%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>