force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/to_Reserves_50__c.field-meta.xml
<CustomField>
    <fullName>to_Reserves_50__c</fullName>
    <formula>breadwinner_qbo__Amount_Received__c *(1/2)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to Reserves(50%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>