force-app/main/default/objects/breadwinner_qbo__Invoice__c/listViews/breadwinner_qbo__Credit_Memos.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Credit_Memos</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Status_Flag__c</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Invoice_Date__c</columns>
    <columns>breadwinner_qbo__Credit_Memo_Allocated_Credit__c</columns>
    <columns>breadwinner_qbo__Credit_Memo_Unallocated_Credit__c</columns>
    <columns>breadwinner_qbo__Credit_Memo_Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Type__c</field>
        <operation>equals</operation>
        <value>Credit Memo</value>
    </filters>
    <label>Credit Memos</label>
</ListView>