force-app/main/default/objects/breadwinner_qbo__Invoice__c/listViews/breadwinner_qbo__Due_Overdue_Invoices.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Due_Overdue_Invoices</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Status_Flag__c</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>Agency__c</columns>
    <columns>breadwinner_qbo__Due_Date__c</columns>
    <columns>breadwinner_qbo__Invoice_Date__c</columns>
    <columns>breadwinner_qbo__Amount_Overdue__c</columns>
    <columns>breadwinner_qbo__Amount_Due__c</columns>
    <columns>breadwinner_qbo__Amount_Received__c</columns>
    <columns>breadwinner_qbo__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Invoices</label>
</ListView>