force-app/main/default/objects/breadwinner_qbo__Invoice__c/listViews/breadwinner_qbo__Sales_Orders.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Status_Flag__c</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Invoice_Date__c</columns>
    <columns>breadwinner_qbo__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Type__c</field>
        <operation>equals</operation>
        <value>Sales Order</value>
    </filters>
    <label>Sales Orders</label>
</ListView>